--- a/Views/AccountChangePassword/AccountChangePassword.cshtml
+++ b/Views/AccountChangePassword/AccountChangePassword.cshtml
@@ -55,6 +55,20 @@
             box-sizing: border-box;
             flex-shrink: 0;
         }
+
+        .password-container {
+            position: relative;
+            width: 100%;
+        }
+
+        .eye-icon {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            cursor: pointer;
+            user-select: none;
+        }
     </style>
 </head>
 <body>
@@ -70,11 +84,17 @@
             }
             <div class="form-container-row">
                 <div class="header-row"><span>Старий пароль: </span></div>
-                @Html.TextBoxFor(m => m.OldPassword,  new { placeholder = "Старий пароль", type = "password", @required = "required", @class = "data-input"})
+                <div class="password-container">
+                    @Html.TextBoxFor(m => m.OldPassword, new { placeholder = "Старий пароль", type = "password", @class = "data-input", @required = "required", id = "old-password-field" })
+                    <span class="eye-icon" onclick="togglePasswordVisibility('old-password-field', this)">👁️</span>
+                </div>
             </div>
             <div class="form-container-row">
                 <div class="header-row"><span>Новий пароль: </span></div>
-                @Html.TextBoxFor(m => m.NewPassword,  new { placeholder = "Новий пароль", type = "password", @required = "required", @class = "data-input"})
+                <div class="password-container">
+                    @Html.TextBoxFor(m => m.NewPassword, new { placeholder = "Новий пароль", type = "password", @class = "data-input", @required = "required", id = "new-password-field" })
+                    <span class="eye-icon" onclick="togglePasswordVisibility('new-password-field', this)">👁️</span>
+                </div>
             </div>
             <div class="form-container-row">
                 <div class="btn-container"><input class="add-btn" value="Змінити пароль" type="submit" style="width: 170px;" /></div>
@@ -82,3 +102,15 @@
         }
     </div>
 </body>
+<script>
+    function togglePasswordVisibility(passwordFieldId, eyeIcon) {
+        var passwordField = document.getElementById(passwordFieldId);
+        if (passwordField.type === "password") {
+            passwordField.type = "text";
+            eyeIcon.textContent = "🙈";
+        } else {
+            passwordField.type = "password";
+            eyeIcon.textContent = "👁️";
+        }
+    }
+</script>
