--- a/Views/EnterpriseList/EnterpriseList.cshtml
+++ b/Views/EnterpriseList/EnterpriseList.cshtml
@@ -5,6 +5,22 @@
 <head>
     <link rel="stylesheet" href="~/css/enterpriseListStyleSheet.css" />
     <script src="~/js/googleMapsScript.js" ></script>
+    <style>
+        .hidden {
+            opacity: 0;
+        }
+
+        .visible {
+            opacity: 1;
+        }
+
+        .resizer {
+            cursor: col-resize;
+            width: 13px;
+            height: 17px;
+            margin-left: 7px;
+        }
+    </style>
 </head>
 <body>
     @if (TempData["NotifyModal"] != null && (bool)TempData["NotifyModal"]!)
@@ -23,102 +39,139 @@
             JoinSearches("SearchGeneral");
         }
         @Html.ActionLink("Додати підприємство", "EnterpriseCreate", "EnterpriseCreate", null, new { @class = "add-btn-fullwidth" })
-        <div class="header-container">
-            <div class="header-part">
-                @{
-                    EnterpriseListViewModel CreateViewModelWithSort(bool? sortEnterpriseId, bool? sortAlphabetCountry, bool? sortAlphabetRegion, bool? sortAlphabetCity)
-                    => new()
-                    {
-                        SearchGeneral = Model.SearchGeneral,
-                        SearchName = Model.SearchName,
-                        SearchCountry = Model.SearchCountry,
-                        SearchRegion = Model.SearchRegion,
-                        SearchCity = Model.SearchCity,
-                        SortEnterpriseId = sortEnterpriseId,
-                        SortAlphabetCountry = sortAlphabetCountry,
-                        SortAlphabetRegion = sortAlphabetRegion,
-                        SortAlphabetCity = sortAlphabetCity,
-                        NumberItemsPerPage = Model.NumberItemsPerPage,
-                        TotalPageCount = Model.TotalPageCount
-                    };
-                }
-                <div class="header-part-column">
-                    <span>Підприємство</span>
-                    @Html.ActionLink("↓", "EnterpriseList", "EnterpriseList", CreateViewModelWithSort(true, null, null, null))
-                </div>
-                <div class="header-part-column">
-                    <span>Країна</span>
-                    @Html.ActionLink("↓", "EnterpriseList", "EnterpriseList", CreateViewModelWithSort(null, true, null, null))
-                </div>
-                <div class="header-part-column">
-                    <span>Регіон / Область</span>
-                    @Html.ActionLink("↓", "EnterpriseList", "EnterpriseList", CreateViewModelWithSort(null, null, true, null))
-                </div>
-                <div class="header-part-column">
-                    <span>Населений пункт</span>
-                    @Html.ActionLink("↓", "EnterpriseList", "EnterpriseList", CreateViewModelWithSort(null, null, null, true))
-                </div>
-                <div class="header-part-column">На карті</div>
-            </div>
-            <div class="header-part">
-                @{
-                    void JoinSearches(string currentQuery)
-                    {
-                        if (!string.IsNullOrEmpty(Model.SearchGeneral) && currentQuery != "SearchGeneral")
-                            @Html.HiddenFor(m => m.SearchGeneral)
-
-                        if (!string.IsNullOrEmpty(Model.SearchName) && currentQuery != "SearchName")
-                            @Html.HiddenFor(m => m.SearchName)
-
-                        if (!string.IsNullOrEmpty(Model.SearchCountry) && currentQuery != "SearchCountry")
-                            @Html.HiddenFor(m => m.SearchCountry)
-
-                        if (!string.IsNullOrEmpty(Model.SearchRegion) && currentQuery != "SearchRegion")
-                            @Html.HiddenFor(m => m.SearchRegion)
-
-                        if (!string.IsNullOrEmpty(Model.SearchCity) && currentQuery != "SearchCity")
-                            @Html.HiddenFor(m => m.SearchCity)
-
-                        @Html.HiddenFor(m => m.NumberItemsPerPage)
+        <div class="content hidden" data-page-identifier="EnterpriseList">
+            <div class="header-container">
+                <div class="header-part">
+                    @{
+                        EnterpriseListViewModel CreateViewModelWithSort(bool? sortEnterpriseId, bool? sortAlphabetCountry, bool? sortAlphabetRegion, bool? sortAlphabetCity)
+                        => new()
+                        {
+                            SearchGeneral = Model.SearchGeneral,
+                            SearchName = Model.SearchName,
+                            SearchCountry = Model.SearchCountry,
+                            SearchRegion = Model.SearchRegion,
+                            SearchCity = Model.SearchCity,
+                            SortEnterpriseId = sortEnterpriseId,
+                            SortAlphabetCountry = sortAlphabetCountry,
+                            SortAlphabetRegion = sortAlphabetRegion,
+                            SortAlphabetCity = sortAlphabetCity,
+                            NumberItemsPerPage = Model.NumberItemsPerPage,
+                            TotalPageCount = Model.TotalPageCount
+                        };
                     }
-                }
-                @using (Html.BeginForm("EnterpriseList", "EnterpriseList", FormMethod.Get, new { @class = "search" }))
+                    <div class="header-part-column">
+                        <span>
+                            Підприємство
+                            @Html.ActionLink("↓", "EnterpriseList", "EnterpriseList", CreateViewModelWithSort(true, null, null, null))
+                        </span>
+                        
+                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <div class="header-part-column">
+                        <span>
+                            Країна
+                            @Html.ActionLink("↓", "EnterpriseList", "EnterpriseList", CreateViewModelWithSort(null, true, null, null))
+                        </span>
+                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <div class="header-part-column">
+                        <span>
+                            Регіон / Область
+                            @Html.ActionLink("↓", "EnterpriseList", "EnterpriseList", CreateViewModelWithSort(null, null, true, null))
+                        </span>
+                        
+                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <div class="header-part-column">
+                        <span>
+                            Населений пункт
+                            @Html.ActionLink("↓", "EnterpriseList", "EnterpriseList", CreateViewModelWithSort(null, null, null, true))
+                        </span>
+                        
+                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                    <div class="header-part-column">
+                        <span>На карті</span>
+                        <svg class="resizer" viewBox="0 0 34 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M10.9429 11.0572L2.74293 19.2572C2.64267 19.3532 2.56289 19.4685 2.50839 19.5962C2.45388 19.7238 2.42578 19.8612 2.42578 20C2.42578 20.1388 2.45388 20.2762 2.50839 20.4039C2.56289 20.5315 2.64267 20.6469 2.74293 20.7429L10.9429 28.9429M23.0572 11.0572L27.1572 15.1572L31.2572 19.2572C31.3575 19.3532 31.4373 19.4685 31.4918 19.5962C31.5463 19.7238 31.5744 19.8612 31.5744 20C31.5744 20.1388 31.5463 20.2762 31.4918 20.4039C31.4373 20.5315 31.3575 20.6469 31.2572 20.7429L23.0572 28.9429M17.0001 38.5714V1.42859" stroke="#595586" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" />
+                        </svg>
+                    </div>
+                </div>
+                <div class="header-part">
+                    @{
+                        void JoinSearches(string currentQuery)
+                        {
+                            if (!string.IsNullOrEmpty(Model.SearchGeneral) && currentQuery != "SearchGeneral")
+                                @Html.HiddenFor(m => m.SearchGeneral)
+
+                            if (!string.IsNullOrEmpty(Model.SearchName) && currentQuery != "SearchName")
+                                @Html.HiddenFor(m => m.SearchName)
+
+                            if (!string.IsNullOrEmpty(Model.SearchCountry) && currentQuery != "SearchCountry")
+                                @Html.HiddenFor(m => m.SearchCountry)
+
+                            if (!string.IsNullOrEmpty(Model.SearchRegion) && currentQuery != "SearchRegion")
+                                @Html.HiddenFor(m => m.SearchRegion)
+
+                            if (!string.IsNullOrEmpty(Model.SearchCity) && currentQuery != "SearchCity")
+                                @Html.HiddenFor(m => m.SearchCity)
+
+                            @Html.HiddenFor(m => m.NumberItemsPerPage)
+                        }
+                    }
+                    @using (Html.BeginForm("EnterpriseList", "EnterpriseList", FormMethod.Get, new { @class = "search" }))
+                    {
+                        <img src="~/icons/Search.svg" />
+                        @Html.TextBoxFor(m => m.SearchName, new { placeholder = "Пошук", @Value = Model.SearchName })
+                        JoinSearches("SearchName");
+                        <input type="submit" style="visibility: hidden;" />
+                    }
+                    @using (Html.BeginForm("EnterpriseList", "EnterpriseList", FormMethod.Get, new { @class = "search" }))
+                    {
+                        <img src="~/icons/Search.svg" />
+                        @Html.TextBoxFor(m => m.SearchCountry, new { placeholder = "Пошук", @Value = Model.SearchCountry })
+                        JoinSearches("SearchCountry");
+                        <input type="submit" style="visibility: hidden;" />
+                    }
+                    @using (Html.BeginForm("EnterpriseList", "EnterpriseList", FormMethod.Get, new { @class = "search" }))
+                    {
+                        <img src="~/icons/Search.svg" />
+                        @Html.TextBoxFor(m => m.SearchRegion, new { placeholder = "Пошук", @Value = Model.SearchRegion })
+                        JoinSearches("SearchRegion");
+                        <input type="submit" style="visibility: hidden;" />
+                    }
+                    @using (Html.BeginForm("EnterpriseList", "EnterpriseList", FormMethod.Get, new { @class = "search" }))
+                    {
+                        <img src="~/icons/Search.svg" />
+                        @Html.TextBoxFor(m => m.SearchCity, new { placeholder = "Пошук", @Value = Model.SearchCity })
+                        JoinSearches("SearchCity");
+                        <input type="submit" style="visibility: hidden;" />
+                    }
+                </div>
+            </div>
+            <div class="cards-container">
+                @foreach (var entity in Model.Entities)
                 {
-                    <img src="~/icons/Search.svg" />
-                    @Html.TextBoxFor(m => m.SearchName, new { placeholder = "Пошук", @Value = Model.SearchName })
-                    JoinSearches("SearchName");
-                    <input type="submit" style="visibility: hidden;" />
-                }
-                @using (Html.BeginForm("EnterpriseList", "EnterpriseList", FormMethod.Get, new { @class = "search" }))
-                {
-                    <img src="~/icons/Search.svg" />
-                    @Html.TextBoxFor(m => m.SearchCountry, new { placeholder = "Пошук", @Value = Model.SearchCountry })
-                    JoinSearches("SearchCountry");
-                    <input type="submit" style="visibility: hidden;" />
-                }
-                @using (Html.BeginForm("EnterpriseList", "EnterpriseList", FormMethod.Get, new { @class = "search" }))
-                {
-                    <img src="~/icons/Search.svg" />
-                    @Html.TextBoxFor(m => m.SearchRegion, new { placeholder = "Пошук", @Value = Model.SearchRegion })
-                    JoinSearches("SearchRegion");
-                    <input type="submit" style="visibility: hidden;" />
-                }
-                @using (Html.BeginForm("EnterpriseList", "EnterpriseList", FormMethod.Get, new { @class = "search" }))
-                {
-                    <img src="~/icons/Search.svg" />
-                    @Html.TextBoxFor(m => m.SearchCity, new { placeholder = "Пошук", @Value = Model.SearchCity })
-                    JoinSearches("SearchCity");
-                    <input type="submit" style="visibility: hidden;" />
+                    @await Html.PartialAsync("_EnterpriseDataCard", entity)
                 }
             </div>
+            @await Html.PartialAsync("_Pagination", Model)
         </div>
-        <div class="cards-container">
-            @foreach (var entity in Model.Entities)
-            {
-                @await Html.PartialAsync("_EnterpriseDataCard", entity)
-            }
-        </div>
-        @await Html.PartialAsync("_Pagination", Model)
     </div>
 </body>
-
+<script src="~/js/resizerScript.js"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const contentElement = document.querySelector('.content');
+        const pageIdentifier = contentElement.getAttribute('data-page-identifier');
+        initColumnResizer(pageIdentifier);
+    });
+</script>
