--- a/wwwroot/css/enterpriseListStyleSheet.css
+++ b/wwwroot/css/enterpriseListStyleSheet.css
@@ -12,6 +12,7 @@
     grid-gap: 5px;
     grid-template-columns: 40% 15% 20% 15% calc(10% - 13px);
     padding-right: 13px;
+    overflow: hidden;
 }
 
 .header-part-column {
