--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="~/css/searchStyleSheet.css" />
     <link rel="stylesheet" href="~/css/menuTabStyleSheet.css" />
     <link rel="stylesheet" href="~/css/addButtonStyleSheet.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap">
 </head>
 <body>
     @if (User.Identity!.IsAuthenticated)
