--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="~/css/searchStyleSheet.css" />
     <link rel="stylesheet" href="~/css/menuTabStyleSheet.css" />
     <link rel="stylesheet" href="~/css/addButtonStyleSheet.css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap&subset=cyrillic" rel="stylesheet">
 </head>
 <body>
     @if (User.Identity!.IsAuthenticated)
