--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,7 +18,11 @@
     <link rel="stylesheet" href="~/css/searchStyleSheet.css" />
     <link rel="stylesheet" href="~/css/menuTabStyleSheet.css" />
     <link rel="stylesheet" href="~/css/addButtonStyleSheet.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap&subset=cyrillic" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-RI/fIep0A9X+dOxaJjK7UKCwNlGx7OZwrAascl1KjOGVT6D+NGbV8F1Wm/Xv5x5p5KtDlj8BGB0Mum3qzJ9XQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     @if (User.Identity!.IsAuthenticated)
