--- a/wwwroot/css/layoutStyleSheet.css
+++ b/wwwroot/css/layoutStyleSheet.css
@@ -1,6 +1,6 @@
 ﻿body {
     background-color: #F1F4FC;
-    font-family: Roboto;
+    font-family: 'Montserrat';
     overflow-y: auto;
     overflow-x: hidden;
 }
